--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,13 @@
 /* start coding here */
+input {
+    border-radius: 3px;
+    width: 240px;
+    height: 50px;
+}
+
+button {
+    border: 1px solid lightgray;
+    width: 120px;
+    height: 36px;
+    background-color: khaki;
+}
